@@ -1,2 +1,2 @@
-java -jar Streaming_TjenesteGRPRO.jar
+java -jar --module-path C:\Users\madsc\Documents\GitHub\Streaming_TjenesteGRPRO\JavaFX\javafx-sdk-13.0.1\lib --add-modules javafx.controls,javafx.fxml Streaming_TjenesteGRPRO.jar
 pause
